--- a/Team_Cucumber/frontend/package.json
+++ b/Team_Cucumber/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "zustand": "^5.0.8"
@@ -24,6 +25,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
